# plasma-desktop-branding

./: .gitignore  LICENSE  README.md  meson.build  meson_options.txt  mkrelease.sh
applications/: kde-mimeapps.list
desktoptheme/: metadata.desktop
env/: 50-solus-defaults.sh  meson.build
look-and-feel/: defaults  meson.build
plasma/: meson.build
plasma/color-schemes/: SolusDark.colors  meson.build
plasma/desktoptheme/: colors  meson.build  metadata.desktop
plasma/look-and-feel/: defaults  metadata.desktop  metadata.json
plasma/wallpapers/: meson.build  metadata.desktop
schemas/: meson.build
schemas/livecd/: meson.build
solus-desktoptheme/: meson.build
solus-desktoptheme/Solus/desktoptheme/solus-dark/: colors  metadata.desktop  metadata.json
solus-desktoptheme/Solus/desktoptheme/solus-dark/widgets/: busywidget.svgz
solus-desktoptheme/Solus/desktoptheme/solus-light/: colors  metadata.desktop  metadata.json
solus-desktoptheme/Solus/layout-templates/solus.desktop.defaultPanel/: metadata.desktop
solus-desktoptheme/Solus/layout-templates/solus.desktop.defaultPanel/contents/: layout.js
solus-desktoptheme/Solus/look-and-feel/solusdark.desktop/: metadata.desktop  metadata.json
solus-desktoptheme/Solus/look-and-feel/solusdark.desktop/contents/: defaults
solus-desktoptheme/Solus/look-and-feel/soluslight.desktop/: metadata.desktop  metadata.json
solus-desktoptheme/Solus/look-and-feel/soluslight.desktop/contents/: defaults
solus-desktoptheme/SolusDark/: meson.build
solus-desktoptheme/SolusDark/desktoptheme/solus-dark/: colors  metadata.desktop
solus-desktoptheme/SolusDark/layout-templates/solus.desktop.defaultPanel/: metadata.desktop  metadata.json
solus-desktoptheme/SolusDark/layout-templates/solus.desktop.defaultPanel/contents/: layout.js
solus-desktoptheme/SolusDark/look-and-feel/solusdark.desktop/: metadata.json
solus-desktoptheme/SolusDark/look-and-feel/solusdark.desktop/contents/: defaults
solus-desktoptheme/color-schemes/: SolusDark.colors  SolusLight.colors
solus-desktoptheme/wallpapers/: meson.build
solus-desktoptheme/wallpapers/SolusPlasma/contents/: screenshot.jxl
solus-desktoptheme/wallpapers/SolusPlasma/contents/images/: 1366x768.jxl  1920x1280.jxl  2560x1440.jxl  3200x1800.jxl  3840x2160.jxl
xdg/: breezerc  dolphinrc  kateschemarc  katesyntaxhighlightingrc  kcm-about-distrorc  kcminputrc  kdeglobals  kglobalshortcutsrc  klaunchrc  konversationrc  kscreenlockerrc  kwinrc  meson.build  plasmarc  touchpadxlibinputrc
xdg/livecd/: kscreenlockerrc  meson.build  plasma-desktop-branding.tmpfiles.in  plasma-welcomerc
