xdg_data = [
    'baloofilerc',
    'breezerc',
    'katerc',
    'katepartrc',
    'kateschemarc',
    'katesyntaxhighlightingrc',
    'kcm-about-distrorc',
    'kcminputrc',
    'kded5rc',
    'kdeglobals',
    'klaunchrc',
    'klipperrc',
    'klaunchrc',
    'konversationrc',
    'kscreenlockerrc',
    'ksmserverrc',
    'ksplashrc',
    'kwinrc',
    'kwinrulesrc',
    'plasmarc',
    'spectaclerc',
    'touchpadxlibinputrc',
]

xdg_dir = join_paths(path_datadir, 'xdg')

install_data(
    xdg_data,
    install_dir: xdg_dir,
)
