xdg_data = [
    'baloofilerc',
    'breezerc',
    'katepartrc',
    'kcm-about-distrorc',
    'kcminputrc',
    'kded5rc',
    'kdeglobals',
    'klaunchrc',
    'klipperrc',
    'klaunchrc',
    'konversationrc',
    'kscreenlockerrc',
    'ksmserverrc',
    'ksplashrc',
    'kwinrc',
    'kwinrulesrc',
    'plasmarc',
    'spectaclerc',
]

xdg_dir = join_paths(path_datadir, 'xdg')

install_data(
    xdg_data,
    install_dir: xdg_dir,
)
