install_subdir('avatars', install_dir: join_paths(path_datadir, 'plasma'))
install_subdir('desktoptheme', install_dir: join_paths(path_datadir, 'plasma'))
install_subdir('layout-templates', install_dir: join_paths(path_datadir, 'plasma'))
install_subdir('look-and-feel', install_dir: join_paths(path_datadir, 'plasma'))
